src/test/ui/array-not-vector.stderr
error[E0308]: mismatched types
  --> $DIR/array-not-vector.rs:2:19
   |
LL |     let _x: i32 = [1, 2, 3];
   |                   ^^^^^^^^^ expected `i32`, found array `[{integer}; 3]`

error[E0308]: mismatched types
  --> $DIR/array-not-vector.rs:7:20
   |
LL |     let _y: &i32 = x;
   |                    ^ expected `i32`, found slice `[i32]`
   |
   = note: expected reference `&i32`
              found reference `&[i32]`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
